# mlir-tooling-playground

./: .gitignore  README.md
lit-and-filecheck/: 01-lit-basics.md  02-filecheck-basics.md  03-filecheck-directives.md  04-filecheck-variables.md  05-mlir-testing.md  06-hands-on.md  README.md
lit-and-filecheck/example/: .gitignore  CMakeLists.txt  README.md  run.sh
lit-and-filecheck/example/broken/: expects_muli.mlir  undefined_var.mlir
lit-and-filecheck/example/test/: canonicalize.mlir  cse.mlir  invalid.mlir  lit.cfg.py  lit.site.cfg.py.in
lit-and-filecheck/scripts/: README.md  _common.sh  run-all.sh  try-01.sh  try-02.sh  try-03.sh  try-04.sh  try-05.sh  try-06.sh  try.sh
llvm-tablegen/: README.md
llvm-tablegen/backend/: CMakeLists.txt  README.md  run-all.sh
llvm-tablegen/backend/1-entry-point/: 01_skeleton.cpp  01_skeleton.td
llvm-tablegen/backend/2-records-and-values/: 02_walk_records.cpp  02_walk_records.td
llvm-tablegen/backend/3-init-values/: 03_init_types.cpp  03_init_types.td
llvm-tablegen/backend/4-emitting-and-errors/: 04_enum_emitter.cpp  04_enum_emitter.td
llvm-tablegen/backend/5-registration/: 05_registered_tool.cpp  05_registered_tool.td
llvm-tablegen/backend/6-searchable-tables/: 06_searchable_demo.cpp  06_searchable_table.td
llvm-tablegen/language/: README.md  gen-all.sh  td2cpp.py
llvm-tablegen/language/codegen-demo/: CMakeLists.txt  encoding_demo.cpp  miniisa_demo.cpp  searchable_demo.cpp
llvm-tablegen/language/solution/: 01_first.td  02_class.td  03_types.td  04_template.td  05_exercise.td  05_let.td  06_bang_op.td  07_paste.td  08_multiclass.td  09_defvar_defset.td  10_control_flow.td  11_dag.td  12_subroutine.td  13_preproc.td  14_miniisa.td  15_encoding.td  16_searchable_table.td
mlir-tablegen/: README.md  gen-all.sh
mlir-tablegen/attrs-and-types/: README.md
mlir-tablegen/attrs-and-types/1-basics/: 01_attrdef.td  02_typedef.td
mlir-tablegen/attrs-and-types/2-parameters/: 03_parameters.td  04_optional_default.td
mlir-tablegen/attrs-and-types/3-assembly-format/: 05_assembly_format.td  06_custom_format.td
mlir-tablegen/attrs-and-types/4-builders-and-verification/: 07_builders.td  08_verification.td
mlir-tablegen/attrs-and-types/5-traits-interfaces-extras/: 09_traits_interfaces.td  10_extra_and_storage.td
mlir-tablegen/capstone-toy/: CMakeLists.txt  README.md
mlir-tablegen/capstone-toy/include/Toy/: ToyDialect.h  ToyOps.h  ToyOps.td
mlir-tablegen/capstone-toy/lib/: ToyDialect.cpp  ToyPatterns.cpp
mlir-tablegen/capstone-toy/tools/: toy-capstone.cpp
mlir-tablegen/drr/: README.md
mlir-tablegen/drr/1-basics/: 01_basic_pattern.td
mlir-tablegen/drr/2-constraints/: 02_constraints.td
mlir-tablegen/drr/3-native-code/: 03_native_code.td
mlir-tablegen/drr/4-multi-result-and-aux/: 04_multi_and_aux.td
mlir-tablegen/drr/5-directives/: 05_directives.td
mlir-tablegen/ods/: README.md
mlir-tablegen/ods/1-dialect-and-ops/: 01_dialect.td  02_op_metadata.td
mlir-tablegen/ods/2-arguments/: 03_operands.td  04_attributes.td  05_variadic.td
mlir-tablegen/ods/3-results-and-regions/: 06_results.td  07_regions_successors.td
mlir-tablegen/ods/4-traits-and-verification/: 08_traits.td  09_constraints.td
mlir-tablegen/ods/5-assembly-and-builders/: 10_assembly_format.td  11_builders.td
mlir-tablegen/ods/6-enums/: 12_enum.td
